--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     margin-left: auto;
     margin-right: auto;
 }
+body{
+    background-color: grey;
+    color: white;
+}
 
 input{
     width:90%;
@@ -10,6 +14,7 @@ input{
 }
 .container{
     margin-left: 10px;
+    text-align: center;
 }
 .cont1{
     text-align: center;
@@ -28,4 +33,7 @@ small{
 }
 span {
     padding-left: 4px;
+}
+.cent{
+    text-align: center;
 }
